[gd_scene load_steps=5 format=3 uid="uid://cvvln5kh0hp8t"]

[ext_resource type="PackedScene" uid="uid://bwwpn3lxnp6yb" path="res://scenes/game.tscn" id="2_jh1ax"]
[ext_resource type="Script" uid="uid://b2utpgqq51w1f" path="res://scripts/stats.gd" id="3_kycxp"]
[ext_resource type="Theme" uid="uid://dpiqbwijqsu3y" path="res://assets/ui_root.tres" id="4_j287u"]
[ext_resource type="Script" uid="uid://bvd5h8qtmqorl" path="res://scripts/map_rect.gd" id="5_jh1ax"]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1060.0
offset_bottom = -711.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_vertical_guides_ = [641.0]
metadata/_edit_horizontal_guides_ = [480.0]

[node name="Game" parent="." instance=ExtResource("2_jh1ax")]
unique_name_in_owner = true

[node name="Stats" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("3_kycxp")

[node name="VBoxContainer" type="VBoxContainer" parent="Stats"]
offset_left = 8.0
offset_top = 8.0
offset_right = 274.0
offset_bottom = 262.0
size_flags_horizontal = 0

[node name="FPS" type="Label" parent="Stats/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
text = "FPS"

[node name="Day" type="Label" parent="Stats/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
text = "Day"

[node name="Time" type="Label" parent="Stats/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
text = "Time"

[node name="CursorPos" type="Label" parent="Stats/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
text = "CursorPos"

[node name="TileName" type="Label" parent="Stats/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
text = "SelectedTileName"

[node name="TerrainName" type="Label" parent="Stats/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
text = "TerrainName"

[node name="TilePlant" type="Label" parent="Stats/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
text = "TilePlant"

[node name="TileDistance" type="Label" parent="Stats/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
text = "Tile Distance"

[node name="TileInfluence" type="Label" parent="Stats/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
text = "Distance"

[node name="HBoxContainer" type="HBoxContainer" parent="Stats"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 1280.0
grow_vertical = 0

[node name="Mana" type="Label" parent="Stats/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
theme_override_colors/font_color = Color(3.08037e-06, 0.755475, 0.649787, 1)
theme_override_font_sizes/font_size = 32
text = "Mana"

[node name="Water" type="Label" parent="Stats/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
theme_override_colors/font_color = Color(0.271792, 0.630638, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Water"

[node name="Influence" type="Label" parent="Stats/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_j287u")
theme_override_colors/font_color = Color(0.67924, 0.371656, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Influence"

[node name="MapRect" type="TextureRect" parent="Stats"]
visible = false
modulate = Color(1, 1, 1, 0.305882)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -393.0
offset_bottom = 345.0
grow_horizontal = 0
script = ExtResource("5_jh1ax")

[node name="Crosshair" type="Label" parent="Stats"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -12.5
offset_right = 6.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.67, 0.591833, 0.25098)
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
